kubernetes/apps/flux-system/webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
    - host: flux.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux.${DOMAIN}
